# Llyra

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config-local.json  config.json  strategy-local.json  strategy-remote.json  strategy.json
configs/: config.toml  strategy.toml
examples/: call.py  call_remote.py  chat.py  chat_remote.py  local_call.py  local_chat.py  remote_call.py  remote_chat.py
llyra/: __init__.py  configs.py
llyra/base/: __init__.py  prompts.py
llyra/components/: __init__.py
llyra/errors/: __init__.py  remotes.py
llyra/local/: __init__.py  config.py  configs.py  llama.py  log.py  logs.py  prompt.py  prompts.py  strategy.py  strategys.py
llyra/main/: __init__.py  definition.py
llyra/prompts/: defination.py
llyra/remote/: configs.py  logs.py  prompts.py  strategys.py
prompts/: prompt.txt
tests/configs/: config_local.json  config_missing_directory.json  config_missing_format.json  config_missing_indicate.json  config_missing_model.json  config_missing_placeholder.json  config_missing_strategy.json  config_normal.json  config_remote.json  config_without_endpoint.json  config_without_model.json  config_without_strategy.json  config_without_stream.json  config_without_url.json  test_configs.py  test_configs_base.py  test_configs_basic.py  test_configs_local.py  test_configs_remote.py
tests/logs/: test_logs.py  test_logs_base.py  test_logs_local.py  test_logs_remote.py
tests/prompts/: test_prompts.py  test_prompts_base.py  test_prompts_local.py  test_prompts_remote.py
tests/strategys/: strategy_base.json  (+26 more)
(+46 files in other folders)
