[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llyra"
version = "0.1.0"
description = "A lightweight interface for calling LLMs with strategy."
authors = [
    { name="Albus Shore", email="albus_shore@outlook.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/albus-shore/Llyra"
Repository = "https://github.com/albus-shore/Llyra"

[tool.setuptools.packages.find]
where = ["."]
include = ["llyra*"]